ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"

    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.global-static-ip-name: web-static-ip

spec:
  rules:
  - http:
      paths:
      - path: /nodejs-service
        pathType: Prefix
        backend:
          service:
            name: nodejs-service
            port:
              number: 80
      - path: /react-app-service
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 3000 # Ensure this matches the targetPort of react-app-service
